# browser-persistent-tool

./: .env.example  .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt  run.py
backend/app/: database.py  main.py  models.py  schemas.py
extension/: package-lock.json  package.json  vite.config.ts
extension/src/: background.ts  capture-once.html  capture-once.ts  manifest.json  popup.html  popup.ts  snapshot.ts  types.ts
scripts/: capture_once.py
