[project]
name = "workspace-memory"
version = "0.1.0"
description = "Local workspace session persistence API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
]

[tool.uv]
package = false
